--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="container">
-
+    古剑奇谭1版地址：http://gjqt.github.io/
     <div class="heading">
       <h1 class="title">古剑奇谭2</h1>
       <div class="scores-container">
@@ -86,7 +86,7 @@
    
     <hr> 
     <p>
-    by <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
+    有问题可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
 
   <script src="javascripts/animframe_polyfill.js"></script>
