--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
 
   <div class="container">
-    古剑奇谭1版地址：http://gjqt.github.io/
+    <p>古剑奇谭1版地址：<a href=‘http://gjqt.github.io/’>http://gjqt.github.io/</a></p>
+    <br>
     <div class="heading">
       <h1 class="title">古剑奇谭2</h1>
       <div class="scores-container">
