--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="container">
-    <p>古剑奇谭1版地址：http://gjqt.github.io</p>
+    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p><br>
     <br>
     <div class="heading">
       <h1 class="title">古剑奇谭2</h1>
