--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p><br>
     <br>
     <div class="heading">
-      <h1 class="title">古剑奇谭2</h1>
+      <h1 class="title">2048之古剑奇谭2</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
