--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
 
   <div class="container">
-    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p><br>
+    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
+    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <br>
     <br>
     <div class="heading">
       <h1 class="title">2048之古剑奇谭2</h1>
