--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">合并方块，努力打败 <strong>丽丽</strong> 吧！</p>
+    <p class="game-intro">合并方块，努力找到躲在厕所里的 <strong>丽丽</strong> 吧！</p>
     <div class="game-container">
       <div class="game-message">
         <p></p>
