--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -21,10 +21,11 @@
   <div class="container">
     <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <p>一代及二代主要人物版：<a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
     <br>
     <br>
     <div class="heading">
-      <h1 class="title">2048之古剑奇谭2</h1>
+      <h2 class="title">2048之古剑奇谭二</h2>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -106,6 +107,6 @@ var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " 
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F63420b9558ce85b4619e0f4f1877517d' type='text/javascript'%3E%3C/script%3E"));
 </script>
 
-<img border="0" src="images/131072.jpg" width="0" height="0"><img border="0" src="images/65536.jpg" width="0" height="0">
+<img border="0" src="images/131072.jpg" width="0" height="0">
 </body>
 </html>
