--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
-    <p>一代及二代主要人物版：<a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+    <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
     <br>
     <br>
     <div class="heading">
