--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
     <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
     <br>
     <br>
     <div class="heading">
