--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
 <body>
 
   <div class="container">
-    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
-    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
-    <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
-	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
-    <br>
-    <br>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭二</h2>
       <div class="scores-container">
@@ -32,16 +26,15 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">合并方块，努力找到躲在厕所里的 <strong>丽丽</strong> 吧！</p>
+    <p class="game-intro">消灭BOSS，努力找到躲在厕所里的 <strong>丽丽</strong> 吧！</p>
     <div class="game-container">
       <div class="game-message">
         <p></p>
         <div class="lower">
-          <a class="retry-button">Try again</a>
+          <a class="retry-button">卷土重来</a>
           <div class="score-sharing"></div>
         </div>
       </div>
-
       <div class="grid-container">
         <div class="grid-row">
           <div class="grid-cell"></div>
@@ -79,19 +72,24 @@
           <div class="grid-cell"></div>
         </div>
       </div>
-
       <div class="tile-container">
-
       </div>
     </div>
     <p class="game-explanation">
       <strong class="important">规则:</strong> 使用 <strong>上下左右键</strong> 移动方块（触屏设备请直接滑动手指），相同的两个BOSS合并后会变成 <strong>更强大的一个</strong>。
     </p>
-    
-   
-    <hr> 
+    <hr>
+	<br>
+	<p>其他版本：</p>
+    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
+	<p style="color:#A20000";>古剑奇谭一版场景模式（含有大量图片，爪机流量党慎入）：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
+    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
+    <br>
+    <br>
     <p>
-    有问题可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
+    有问题或建议可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
 
   <script src="javascripts/animframe_polyfill.js"></script>
@@ -108,6 +106,5 @@ var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " 
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F63420b9558ce85b4619e0f4f1877517d' type='text/javascript'%3E%3C/script%3E"));
 </script>
 
-<img border="0" src="images/131072.jpg" width="0" height="0">
 </body>
 </html>
