--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <meta property="og:site_name" content="2048 game"/>
 </head>
 <body>
-
   <div class="container">
+	<p><strong>全新玩法上线：</strong>每次出现的BOSS不再只是最低级的BOSS，有机率出现当前最高等级的BOSS！</p>
+	<p><strong>安卓版</strong>正式发布：<a href="http://pan.baidu.com/s/1o6qbRXw">http://pan.baidu.com/s/1o6qbRXw</a></p>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭二</h2>
       <div class="scores-container">
@@ -85,7 +86,7 @@
 	<p style="color:#A20000";>古剑奇谭一版场景模式（含有大量图片，爪机流量党慎入）：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
     <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
     <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
-	<p style="color:#A20000";><strong>苏雪特别版：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
+	<p style="color:#A20000";><strong>苏雪特别版（有背景音乐）：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
     <br>
     <br>
     <p>
