--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
   <div class="container">
 	<p><strong>全新玩法上线：</strong>每次出现的BOSS不再只是最低级的BOSS，有机率出现当前最高等级的BOSS！</p>
-	<p><strong>安卓版</strong>正式发布：<a href="http://pan.baidu.com/s/1o6qbRXw">http://pan.baidu.com/s/1o6qbRXw</a></p>
+	<p><strong>安卓版</strong>下载地址：</p>
+	<a href="http://vdisk.weibo.com/s/vqWG6vgnsT27">http://vdisk.weibo.com/s/vqWG6vgnsT27</a>
     <div class="heading">
       <h2 class="title">2048之古剑奇谭二</h2>
       <div class="scores-container">
@@ -27,7 +28,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">消灭BOSS，努力找到躲在厕所里的 <strong>丽丽</strong> 吧！</p>
+    <p class="game-intro">逐个消灭BOSS，努力找到躲在厕所里哭的 <strong>丽丽</strong> 吧！</p>
     <div class="game-container">
       <div class="game-message">
         <p></p>
@@ -77,7 +78,7 @@
       </div>
     </div>
     <p class="game-explanation">
-      <strong class="important">规则:</strong> 使用 <strong>上下左右键</strong> 移动方块（触屏设备请直接滑动手指），相同的两个BOSS合并后会变成 <strong>更强大的一个</strong>。
+      <strong class="important">规则:</strong> 使用 <strong>上下左右键</strong> 移动方块（触屏设备请直接滑动手指），相同的两个BOSS合并后会变成 <strong>更强大的BOSS</strong>。
     </p>
     <hr>
 	<br>
