--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
-﻿<!DOCTYPE html>
-<html>
+
+<!DOCTYPE html>
+<html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>2048之古剑奇谭</title>
 
-  <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
+  <link href="style/main.css" rel="stylesheet" type="text/css">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="format-detection" content="telephone=no" />
 
   <meta property="og:title" content="2048 game"/>
   <meta property="og:site_name" content="2048 game"/>
 </head>
 <body>
   <div class="container">
-	<p><strong>全新玩法上线：</strong>每次出现的BOSS不再只是最低级的BOSS，有机率出现当前最高等级的BOSS！</p>
-	<p><strong>安卓版</strong>下载地址：</p>
-	<a href="http://vdisk.weibo.com/s/vqWG6vgnsT27">http://vdisk.weibo.com/s/vqWG6vgnsT27</a>
+	<p style="color:#A20000";>本次更新：新增<strong>自动存档</strong>功能。</p>
+	<p>最新<strong>安卓版</strong>下载地址：</p>
+	<a href="http://vdisk.weibo.com/s/vqWG6vgngbkC">http://vdisk.weibo.com/s/vqWG6vgngbkC</a>
+	<hr>
     <div class="heading">
-      <h2 class="title">2048之古剑奇谭二</h2>
+      <h1 class="title">2048之古剑奇谭二</h1>
+	  <br><br>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">逐个消灭BOSS，努力找到躲在厕所里哭的 <strong>丽丽</strong> 吧！</p>
+	<br>
+    <div class="above-game">
+      <a class="restart-button">重新开始</a>
+    </div>
+
     <div class="game-container">
       <div class="game-message">
         <p></p>
-        <div class="lower">
+		<br>
+        <div class="lower">	        
           <a class="retry-button">卷土重来</a>
           <div class="score-sharing"></div>
         </div>
       </div>
+
       <div class="grid-container">
         <div class="grid-row">
           <div class="grid-cell"></div>
@@ -74,39 +83,36 @@
           <div class="grid-cell"></div>
         </div>
       </div>
+
       <div class="tile-container">
+
       </div>
     </div>
+
     <p class="game-explanation">
-      <strong class="important">规则:</strong> 使用 <strong>上下左右键</strong> 移动方块（触屏设备请直接滑动手指），相同的两个BOSS合并后会变成 <strong>更强大的BOSS</strong>。
+      <strong class="important">规则:</strong> 使用 <strong>上下左右键</strong> 移动方块（触屏设备请直接滑动手指），相同的两个BOSS合并后会变成更强大的BOSS。
     </p>
     <hr>
-	<br>
-	<p>其他版本：</p>
-    <p>古剑奇谭一版：<a href="http://gjqt.github.io">http://gjqt.github.io</a></p>
-	<p style="color:#A20000";>古剑奇谭一版场景模式（含有大量图片，爪机流量党慎入）：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
-    <p>古剑奇谭武器版：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
-    <p>历代主要人物(图片模式)版：<br><a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
-	<p style="color:#A20000";><strong>苏雪特别版（有背景音乐）：</strong><br><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
-    <br>
-    <br>
+	<p>其他版本：</p>	
+	<p style="color:#A20000";><strong>苏雪篇：</strong><a href="http://gjqt.github.io/suxue">http://gjqt.github.io/suxue</a></p>
+	<p>古剑奇谭一篇：<a href="http://gjqt.github.io/bg">http://gjqt.github.io/bg</a></p>
+	<p>主角篇：<a href="http://gjqt.github.io/mainRole">http://gjqt.github.io/mainRole</a></p>
+    <p>百里屠苏武器篇：<a href="http://bjdc.github.io">http://bjdc.github.io</a></p>
+    <hr>
     <p>
     有问题或建议可以联系 <a href="http://weibo.com/bjdc" target="_blank">拔剑断愁</a></p>
   </div>
 
-  <script src="javascripts/animframe_polyfill.js"></script>
-  <script src="javascripts/keyboard_input_manager.js"></script>
-  <script src="javascripts/html_actuator.js"></script>
-  <script src="javascripts/grid.js"></script>
-  <script src="javascripts/tile.js"></script>
-  <script src="javascripts/local_score_manager.js"></script>
-  <script src="javascripts/game_manager.js"></script>
-  <script src="javascripts/application.js"></script>
-
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F63420b9558ce85b4619e0f4f1877517d' type='text/javascript'%3E%3C/script%3E"));
-</script>
-
+  <script src="js/bind_polyfill.js"></script>
+  <script src="js/classlist_polyfill.js"></script>
+  <script src="js/animframe_polyfill.js"></script>
+  <script src="js/keyboard_input_manager.js"></script>
+  <script src="js/html_actuator.js"></script>
+  <script src="js/grid.js"></script>
+  <script src="js/tile.js"></script>
+  <script src="js/local_storage_manager.js"></script>
+  <script src="js/game_manager.js"></script>
+  <script src="js/application.js"></script>
+  
 </body>
 </html>
