--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>2048之古剑奇谭</title>
+  <title>2048之古剑奇谭二</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <meta name="apple-mobile-web-app-capable" content="yes">
